--- a/multi-module/webapp/.settings/org.eclipse.wst.common.component
+++ b/multi-module/webapp/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <dependent-module archiveName="server-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/multi-module_server/multi-module_server">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="webapp"/>
         <property name="java-output-path" value="/multi-module_webapp/target/classes"/>
     </wb-module>
